--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -1,27 +1,7 @@
-import React, { ReactNode } from 'react';
-import PropTypes from 'prop-types';
-import classList from './classList';
-import './index.css';
-
-interface ButtonPropTypes {
-  children: ReactNode,
-  type?: string,
-  className?: string,
-  disabled?: boolean,
-  onClick?: any,
-};
-
-function Button({ type = 'primary', className = '', children, ...props }:ButtonPropTypes ) {
-  const cls = `${classList[type]} ${className}`;
-  return (
-    <button className={cls} {...props}>
-      {children}
-    </button>
-  );
+.btn {
+    cursor: pointer;
 }
-
-Button.propTypes = {
-  children: PropTypes.any,
-  type: PropTypes.string,
+.btn:disabled {
+    pointer-events: none;
+    opacity: 0.7;
 }
-export default Button;
